# permutations

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/workflows/: test.yml
src/: const_permutation.rs  error.rs  lib.rs  permutation.rs  permutations.rs  util.rs
